MVP версия + Driver + UnitTest + Javadoc